--- a/style.css
+++ b/style.css
@@ -1,38 +1,90 @@
-    .header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: flex-end;
-        width: 1362px;
-    }
+* {
+    font-family: 'Cairo', sans-serif;
+    background-color: #f4f4f4;
+}
 
-    .header1 {
+/* Header */
+.header {
+        height: 120px;
+        padding-left: 65px;
+        padding-right: 65px;
+        background-color: #ffffff;
+        border-radius: 170% / 190%;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 170% 180%;
+        transform: scale(1.01);
+}
+
+.header1 {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        /*align-items: baseline;*/
-        width: 1000px;
-    }
+        align-items: flex-end;
+        background-color: #ffffff;
+}
 
-    .header2 {
+.list-logo {
+        width: 50%;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        align-items: flex-end;
-        width: 800px;
+        justify-content: space-between;
+        align-items: baseline;
+        background-color: #ffffff;
+}
+
+.logo {
+    background-color: #ffffff;
+    width: 112px;
+    height: 43px;
+    object-fit: contain;
+    padding-top: 5px;
+}
+
+ul {
+
+        background-color: #fff;
+        list-style-type: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+        width: 90%;
+        font-size: 300;
+         flex-basis:  | auto;
     }
 
-    .logo {
-        width: 120px;
+li {
+        background-color: #fff;
     }
 
-    input {
+.logo {
+        width: 112px;
+        background-color: #fff;
+    }
+
+
+.search {
+        display: block;
         background-image: url(https://cdn4.iconfinder.com/data/icons/round-mobile-ui-set/512/letter-message-email-mail-20.png);
         background-position: 10px center;
         background-repeat: no-repeat;
-        background-color: #dee2e6;
+        background-color: #f4f4f4;
         padding: 10px 5px 10px 20px;
-        text-indent: 20px;
-        transition: all 0.2s;
-        width: 200px;
+        width: 100%;
+        height: calc(1.5em + .75rem + 2px);
+        font-size: 1rem;
+        margin-left: 20px;
+        object-fit: contain;
     }
+
+
+
+
+
+    /* live shows*/
+
+.shows {
+    display: flex;
+    justify-content: space-between;
+}    
