--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+html, body {
+    /*position:fixed;*/
+    /*top:0;*/
+    /*bottom:0;*/
+    left:0;
+    right:0;
+    background-color: #f4f4f4;
+}
+
 * {
     font-family: 'Cairo', sans-serif;
-    background-color: #f4f4f4;
 }
 
 /* Header */
 .header {
         height: 120px;
+        width: auto;
         padding-left: 65px;
         padding-right: 65px;
         background-color: #ffffff;
@@ -20,7 +29,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: center;
         background-color: #ffffff;
 }
 
@@ -43,7 +52,7 @@
 
 ul {
 
-        background-color: #fff;
+       
         list-style-type: none;
         display: flex;
         flex-direction: row;
@@ -51,10 +60,14 @@ ul {
         align-items: baseline;
         width: 90%;
         font-size: 300;
-         flex-basis:  | auto;
+        flex-basis:  | auto;
     }
 
-li {
+.head-ul {
+     background-color: #fff;
+}
+
+.head-ul li {
         background-color: #fff;
     }
 
@@ -76,10 +89,15 @@ li {
         font-size: 1rem;
         margin-left: 20px;
         object-fit: contain;
+        border: 0;
     }
 
-
-
+.part1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+}
 
 
     /* live shows*/
@@ -88,3 +106,50 @@ li {
     display: flex;
     justify-content: space-between;
 }    
+
+
+    /*programmes*/
+
+.h2 {
+     text-align: right;
+     background-color: #fff;
+}
+
+.programs {
+    display: flex;
+    flex-direction: column;
+    /*position: absolute;*/
+    left: 150px;
+
+}
+
+.programmes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 79%;
+}
+
+
+/* footer */
+footer {
+    width: 1423px;
+    height: 218px;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: center;
+    padding: 75px 25px 75px 75px;
+    font-size: 12px;
+    font-weight: 100;
+}
+
+
+a {
+    color: #000;
+}
+
+.copy {
+    text-align: center;
+}
